# FFmpegTest

FFmpegTest/: build.gradle
FFmpegTest/app/: CMakeLists.txt  build.gradle
FFmpegTest/app/src/androidTest/java/com/ethanco/ffmpegtest/: ExampleInstrumentedTest.java
FFmpegTest/app/src/main/: AndroidManifest.xml
FFmpegTest/app/src/main/cpp/: native-lib.c
FFmpegTest/app/src/main/java/com/ethanco/ffmpegtest/: MainActivity.java  VideoUtils.java
FFmpegTest/app/src/main/res/layout/: activity_main.xml
FFmpegTest/app/src/main/res/values/: strings.xml
FFmpegTest/app/src/test/java/com/ethanco/ffmpegtest/: ExampleUnitTest.java
ffmpeg_study/: ffpeg_study.sdf  ffpeg_study.sln
ffmpeg_study/ffpeg_study/: ffpeg_study.vcxproj  ffpeg_study.vcxproj.filters  my_ffmpeg.cpp
ffmpeg_study/ffpeg_study/Debug/: vc120.idb
ffmpeg_study/ffpeg_study/Debug/ffpeg_study.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  ffpeg_study.lastbuildstate
ffmpeg_study/ffpeg_study/include/libavutil/: ffversion.h
ffmpeg_study/ffpeg_study/lib/: avcodec.lib  avfilter.lib  avutil.lib  postproc.lib  swresample.lib
ffmpeg_study/ffpeg_study/x64/Debug/: vc120.idb
ffmpeg_study/ffpeg_study/x64/Debug/ffpeg_study.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  ffpeg_study.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ffmpeg_study/x64/Debug/: ffpeg_study.ilk
